...
          </>
        }
        actions={
          <>
            <IconButton
              size="sm"
              testID="notes-list.icon-button.view-mode"
              onPress={() => {
                HapticService.light();
                setShowViewModePicker((previous) => !previous);
              }}
              accessibilityLabel={t('common.viewMode')}
            >
...
