appId: com.xaventra.gitnotes
name: iOS - Template Manager Flow
tags:
  - full
  - ios
  - templates
---

- launchApp:
    clearState: false

- tapOn:
    id: tab-bar.tab.press-SettingsTab

- scrollUntilVisible:
    element:
      id: settings.button.manage-templates
    direction: DOWN

- tapOn:
    id: settings.button.manage-templates

- assertVisible:
    id: template-manager.button.create

- tapOn:
    id: template-manager.icon-button.new-template
