appId: com.xaventra.gitnotes
name: iOS - Todo List Flow
tags:
  - full
  - ios
  - todos
---

- launchApp:
    clearState: false

- tapOn:
    id: tab-bar.tab.press-TodosTab

- waitForAnimationToEnd:
    timeout: 5000

- assertVisible:
    id: todo-list.icon-button.add

- tapOn:
    id: todo-list.icon-button.filter-completed

- tapOn:
    id: todo-list.icon-button.filter-completed

- tapOn:
    id: todo-list.icon-button.filters

- tapOn:
    point: 50%,10%

- tapOn:
    id: todo-list.icon-button.add
